<resources>
    <string name="app_name">TP3</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="create_account">Créer un compte</string>
    <string name="already_have_account">J\'ai déjà un compte</string>
    <string name="email">Email</string>
    <string name="name">Nom</string>
    <string name="password">Mot de passe</string>
    <string name="validate">Valider</string>

    <string name="pleaseFillFields">Merci de remplir tous les champs</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="loading">Chargement...</string>
    <string name="token">token</string>
    <string name="active_user">ACTIVE_USER</string>
    <string name="title_activity_welcome_user">WelcomeUserActivity</string>
    <string name="welcome">Bienvenue</string>
    <string name="action_logout">Déconnexion</string>
    <string name="login">Connexion</string>
    <string name="invalidPassOrMail">Email ou mot de passe invalide</string>
    <string name="emailAlreadyInUse">Cet email est déjà utilisé, merci d\'en choisir un autre.</string>
    <string name="invalidPass">Mot de passe invalide</string>
    <string name="server_emailAlreadyInUse">The specified email address is already in use.</string>
    <string name="server_incorrect_password">This password is not correct.</string>
    <string name="serverOffline">Le serveur n\'est pas accessible, merci de réessayer plus tard.</string>
    <string name="deviceOffline">Aucun connexion à internet active. Merci de vérifier vos paramètres de connexion</string>
    <string name="invalidMail">Adresse mail invalide</string>
    <string name="groupsOf">Groupes de :</string>
    <string name="groupName">Nom du groupe</string>
    <string name="groupUsersEmails">Email des utilisateurs du groupe : (séparés par des virgules)</string>
    <string name="title_activity_group_chat">GroupChatActivity</string>

</resources>
